--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
         </article>
     </section>
     <footer>
-        <a href="#titulo">Ir al comienzo</a>
+        <a href="#titulo">Comienzo</a>
         <a href="mailto:evelyn.paz@usm.cl">Contactame aqui</a>
         <p>Copirigth 2022</p>
     </footer>
